fix: Add overflow hidden to wrapper

--- a/photos/gallery/static/main.styl
+++ b/photos/gallery/static/main.styl
@@ -12,6 +12,7 @@ h1, h2, h3, h4
 .wrapper
   height: 100%
   position: relative
+  overflow: hidden
 
   .image
     width: 100%
